# ms2deepscore-onnx-converter

./: README.md  pyproject.toml
.github/workflows/: code-quality.yml  publish.yml
examples/: benchmark.py  inference.py
src/ms2ds_converter/: __init__.py  cli.py  converter.py  data_loader.py
tests/: ms2deepscore_model.pt  smoke_test.py  test_cli.py  test_converter.py  test_data_loader.py
