[project]
name = "ms2deepscore-onnx-converter"
version = "0.1.0"
description = "A CLI tool to convert ms2deepscore PyTorch models to ONNX"
readme = "README.md"
authors = [
    { name = "Julian Pollmann", email = "julian.pollmann@hs-duesseldorf.de" }
]
license-files = ["LICENSE"]
keywords = [
  "mass spectrometry",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.12"
dependencies = [
    "ms2deepscore>=2.9.0",
    "onnxscript>=0.7.0",
    "pooch>=1.9.0",
]

[project.urls]
repository = "https://github.com/julianpollmann/ms2deepscore-onnx-converter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ms2ds_converter"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[project.scripts]
ms2ds_onnx = "ms2ds_converter.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:# The axis name.*will not be used:UserWarning",
    "ignore:`isinstance\\(treespec, LeafSpec\\)` is deprecated:FutureWarning"
]
